# devflow

./: .gitignore  .mcp.json.example  CHANGELOG.md  GUIDE_RU.md  README.md  start.sh
.claude/: CLAUDE.md  patterns.template.md  settings.json.example
.claude/agents/: architect.md  architecture-guardian.md  debugger.md  js-developer.md  php-developer.md  pm.md  reviewer.md  tester.md  tracer.md
.claude/agents/templates/: architecture-guardian.template.md  developer.template.md  reviewer.template.md  tester.template.md
.claude/data/: projects.json.example  queue.json.example
.claude/docs/: infrastructure.md  multi-project.md  workflows.md
.claude/hooks/: auto-approve.sh  precompact-snapshot.sh  project-restore.sh  rag-reindex-check.sh  session-end-summarize.sh
devflow-tui/: pyproject.toml
devflow-tui/src/devflow_tui/: __init__.py  app.py
devflow-tui/src/devflow_tui/data/: models.py  reader.py
devflow-tui/src/devflow_tui/screens/: dashboard.py  details.py
devflow-tui/src/devflow_tui/styles/: theme.tcss
devflow-tui/src/devflow_tui/widgets/: phase_bar.py  queue_list.py  session_list.py
devflow-tui/tests/: test_reader.py
mcp-servers/chatgpt-review/: index.js  package-lock.json  package.json
mcp-servers/qwen-review/: index.js  package-lock.json  package.json
scripts/: check-loop.sh  create-branch.sh  devflow-status.sh  e2e-check.sh  git-context.sh  notify.sh  queue-bg.sh  queue-report.sh  read-project-config.sh  require-contract.sh  resolve-agent.sh  run-tests.sh  session-checkpoint.sh  session-log.py  setup.sh  test-reaction.sh  tmux-status.sh
(+33 files in other folders)
