[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devflow-tui"
version = "0.1.0"
description = "TUI monitor for DevFlow sessions and queue"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50",
]

[project.scripts]
devflow-tui = "devflow_tui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/devflow_tui"]

[tool.pytest.ini_options]
testpaths = ["tests"]
